app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --background-rgb: 255, 255, 255;
  --foreground: #1b0a10;
  --foreground-rgb: 27, 10, 16;
  ;

  --wine: #6A283E;
  --salmon-light: #F38577;
  --salmon-default: #CB6359;
  --salmon-dark: #9F3934;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #1b0a10;
    --background-rgb: 27, 10, 16;
    --foreground: #ffffff;
    --foreground-rgb: 255, 255, 255;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

.scrollbar::-webkit-scrollbar {
  width: 5px;
}

.scrollbar::-webkit-scrollbar-track {
  background: var(--foreground);
  border-radius: 5px;
}

.scrollbar::-webkit-scrollbar-thumb {
  background-color: var(--wine);
  border-radius: 10px;
  border: 2px solid #f0f0f0;
}

@keyframes spin {
  0% {
    transform: rotate(0deg)
  }

  100% {
    transform: rotate(360deg);
  }
}

